@@ -1,23 +1,18 @@
 package tacos;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-import javax.validation.Valid;
+import jakarta.validation.Valid;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.Errors;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.SessionAttributes;
+import org.springframework.web.bind.annotation.*;
 import tacos.Ingredient.Type;
 
+import java.util.List;
+
+@Slf4j
 @Controller
 @RequestMapping("/design")
-@Slf4j
 @SessionAttributes("tacoOrder")
 public class DesignTacoController {
 
@@ -28,7 +23,7 @@ public class DesignTacoController {
 
     @ModelAttribute
     public void addIngredientsToModel(Model model) {
-        List<Ingredient> ingredients = Arrays.asList(
+        List<Ingredient> ingredients = List.of(
                 new Ingredient("FLTO", "Flour Tortilla", Type.WRAP),
                 new Ingredient("COTO", "Corn Tortilla", Type.WRAP),
                 new Ingredient("GRBF", "Ground Beef", Type.PROTEIN),
@@ -77,9 +72,8 @@ public class DesignTacoController {
 
     private Iterable<Ingredient> filterByType(List<Ingredient> ingredients, Type type) {
         log.info("Type is {}", type);
-        return ingredients
-                .stream()
+        return ingredients.stream()
                 .filter(x -> x.getType().equals(type))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
